--- a/Configuration/config.properties
+++ b/Configuration/config.properties
@@ -1,5 +1,13 @@
-baseURL=https://java-power-2583-dev-ed.scratch.my.salesforce-sites.com/
+#baseURL=https://wsfsbank--fullcopy.sandbox.my.salesforce-sites.com/nextgen
+#baseURL=https://wsfs--staging01.sandbox.my.salesforce-sites.com/#/product-selector
+#baseURL=https://wsfsbank--preprod01.sandbox.my.salesforce-sites.com/nextgen#/product-selector
+appTracker=https://wsfs--staging01.sandbox.my.salesforce-sites.com/apptracker#/
+#baseURL=https://wsfsbank--fullcopy.sandbox.my.salesforce-sites.com/nextgen
+#appTracker=https://wsfsbank--fullcopy.sandbox.my.salesforce-sites.com/nextgen/apptracker#/
+baseURL=https://wsfsbank--crmfull.sandbox.my.salesforce-sites.com/nextgen
+#baseURL=https://demo03-tffa-developer-edition.na123.force.com/
+#baseURL=https://fnbo--tfdev03.sandbox.my.salesforce-sites.com/nextgen
 branchURL=https://test.salesforce.com/
 gmailUrl=https://www.gmail.com
-email=test-4qtxzihbxg3n@example.com
-password=admin123
+email=yterafinan@gmail.com
+password=abcd@1234
